# mips-simulator

./: .gitignore  CMakeLists.txt
include/: const_register.hpp  registers.hpp
include/mips/: const_register.hpp  machine.hpp  memory.hpp  normal_register.hpp  register.hpp
src/: machine.cpp  normal_register.cpp
test/: machine.cpp  memory.cpp  register.cpp
